--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
     "test": "mocha"
   },
   "devDependencies": {
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.7",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.0.1",
     "expect": "^26.6.2",
-    "mocha": "^8.2.1",
+    "mocha": "^8.3.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@well-known-components/env-config-provider": "^1.0.0-20210114204501.commit-2484915",
-    "@well-known-components/http-server": "^1.0.0-20210207003033.commit-3103089",
-    "@well-known-components/interfaces": "^1.0.0-20210207132736.commit-6d004c2",
-    "@well-known-components/logger": "^1.0.0-20210110175006.commit-9c592da",
-    "@well-known-components/metrics": "^1.0.0-20210207144449.commit-7f69e96",
+    "@well-known-components/env-config-provider": "^1.1.0",
+    "@well-known-components/http-server": "^1.0.0",
+    "@well-known-components/interfaces": "^1.1.0",
+    "@well-known-components/logger": "^1.0.0",
+    "@well-known-components/metrics": "^1.1.1",
+    "@well-known-components/test-helpers": "^1.1.0-20210427222307.commit-d92c3ed",
     "prom-client": "^13.1.0"
   }
 }
