--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "crypto-exporter",
+  "name": "template-server",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
-    "test": "mocha"
+    "start": "node --abort-on-uncaught-exception --unhandled-rejections=strict dist/index.js",
+    "test": "jest --forceExit --detectOpenHandles --coverage --verbose"
   },
   "devDependencies": {
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.0.1",
-    "expect": "^26.6.2",
-    "mocha": "^8.4.0",
-    "ts-node": "^9.1.1",
+    "@types/node": "^14.17.0",
+    "@well-known-components/test-helpers": "^1.0.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
@@ -18,8 +15,6 @@
     "@well-known-components/http-server": "^1.0.0",
     "@well-known-components/interfaces": "^1.1.0",
     "@well-known-components/logger": "^1.0.0",
-    "@well-known-components/metrics": "^1.1.1",
-    "@well-known-components/test-helpers": "^1.1.0-20210427222307.commit-d92c3ed",
-    "prom-client": "^13.1.0"
+    "@well-known-components/metrics": "^1.1.1"
   }
 }
