--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "test": "jest --forceExit --detectOpenHandles --coverage --verbose"
   },
   "devDependencies": {
-    "@types/node": "^14.17.0",
-    "@well-known-components/test-helpers": "^1.0.0",
-    "typescript": "^4.2.4"
+    "@types/node": "^14.17.17",
+    "@well-known-components/test-helpers": "^1.2.0",
+    "typescript": "^4.4.3"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "semi": false
   },
   "dependencies": {
-    "@well-known-components/env-config-provider": "^1.1.0",
-    "@well-known-components/http-server": "^1.0.0",
+    "@well-known-components/env-config-provider": "^1.1.1",
+    "@well-known-components/http-server": "^1.1.0",
     "@well-known-components/interfaces": "^1.1.0",
-    "@well-known-components/logger": "^1.0.0",
-    "@well-known-components/metrics": "^1.1.1"
+    "@well-known-components/logger": "^1.1.0",
+    "@well-known-components/metrics": "^1.1.2"
   }
 }
