--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "template-server",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node --abort-on-uncaught-exception --unhandled-rejections=strict dist/index.js",
+    "start": "node --trace-warnings --abort-on-uncaught-exception --unhandled-rejections=strict dist/index.js",
     "test": "jest --forceExit --detectOpenHandles --coverage --verbose"
   },
   "devDependencies": {
-    "@types/node": "^14.17.0",
+    "@types/node": "^14.17.17",
     "@well-known-components/test-helpers": "^1.2.0",
     "typescript": "^4.4.3"
   },
+  "prettier": {
+    "printWidth": 120,
+    "semi": false
+  },
   "dependencies": {
     "@well-known-components/env-config-provider": "^1.1.1",
-    "@well-known-components/http-server": "^1.0.0",
+    "@well-known-components/http-server": "^1.1.0",
     "@well-known-components/interfaces": "^1.1.0",
     "@well-known-components/logger": "^1.1.0",
-    "@well-known-components/metrics": "^1.1.1"
+    "@well-known-components/metrics": "^1.1.2"
   }
 }
