--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,3 +28,30 @@ jobs:
           #   arg2=value2
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+
+# QUAY
+      # - uses: actions/checkout@v2
+      # - name: Build Image
+      #   id: build-image
+      #   uses: redhat-actions/buildah-build@v2
+      #   with:
+      #     image: IMAGENAME
+      #     tags: ${{ github.sha }} next
+      #     dockerfiles: |
+      #       ./Dockerfile
+
+      # # Podman Login action (https://github.com/redhat-actions/podman-login) also be used to log in,
+      # # in which case 'username' and 'password' can be omitted.
+      # - name: Push To quay.io
+      #   id: push-to-quay
+      #   uses: redhat-actions/push-to-registry@v2
+      #   with:
+      #     image: ${{ steps.build-image.outputs.image }}
+      #     tags: ${{ steps.build-image.outputs.tags }}
+      #     registry: quay.io/decentraland
+      #     username: ${{ secrets.QUAY_USERNAME }}
+      #     password: ${{ secrets.QUAY_TOKEN }}
+
+      # - name: Print image url
+      #   run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"
