--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "devDependencies": {
     "@types/node": "^18.7.13",
-    "@well-known-components/test-helpers": "^1.3.0",
-    "typescript": "^4.7.4"
+    "@well-known-components/test-helpers": "^1.4.0",
+    "typescript": "^4.8.3"
   },
   "prettier": {
     "printWidth": 120,
@@ -16,9 +16,9 @@
   },
   "dependencies": {
     "@well-known-components/env-config-provider": "^1.1.1",
-    "@well-known-components/http-server": "^1.1.2",
-    "@well-known-components/interfaces": "^1.1.1",
+    "@well-known-components/http-server": "^1.1.6-20220927190058.commit-2dfb235",
+    "@well-known-components/interfaces": "^1.1.2",
     "@well-known-components/logger": "^3.0.0",
-    "@well-known-components/metrics": "^1.1.3"
+    "@well-known-components/metrics": "^2.0.1-20220909150423.commit-8f7e5bc"
   }
 }
