--- a/package.json
+++ b/package.json
@@ -6,19 +6,22 @@
     "test": "jest --forceExit --detectOpenHandles --coverage --verbose"
   },
   "devDependencies": {
-    "@types/node": "^20.11.27",
+    "@types/node": "^20.11.28",
     "@well-known-components/test-helpers": "^1.5.6",
-    "typescript": "^5.2.2"
+    "typescript": "^5.4.2"
   },
   "prettier": {
     "printWidth": 120,
-    "semi": false
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "tabWidth": 2
   },
   "dependencies": {
-    "@well-known-components/env-config-provider": "^1.1.1",
-    "@well-known-components/http-server": "^2.0.0",
+    "@well-known-components/env-config-provider": "^1.2.0",
+    "@well-known-components/http-server": "^2.1.0",
     "@well-known-components/interfaces": "^1.4.3",
     "@well-known-components/logger": "^3.1.3",
-    "@well-known-components/metrics": "^2.0.1-20220909150423.commit-8f7e5bc"
+    "@well-known-components/metrics": "^2.1.0"
   }
 }
