--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,14 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Use Node.js 16.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
-          cache: npm
+          node-version: 18.x
+          cache: yarn
       - name: install
-        run: npm ci
+        run: yarn
       - name: build
-        run: npm run build
+        run: yarn build
       - name: test
-        run: npm run test
+        run: yarn test
