--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "dependencies": {
     "@well-known-components/env-config-provider": "^1.2.0",
-    "@well-known-components/http-server": "^2.1.0",
-    "@well-known-components/interfaces": "^1.5.1",
+    "@well-known-components/http-server": "^2.1.1-20250530230252.commit-9d441e7",
+    "@well-known-components/interfaces": "^2.0.0-20250326140025.commit-9510b73",
     "@well-known-components/logger": "^3.1.3",
-    "@well-known-components/metrics": "^2.1.0"
+    "@well-known-components/metrics": "^2.1.0",
+    "jeringa": "^1.0.0-20250226115528.commit-9b7214f"
   }
 }
